--- a/Surfvejr/appsettings.json
+++ b/Surfvejr/appsettings.json
@@ -8,9 +8,8 @@
   },
   "AllowedHosts": "surfsup.live;localhost",
   "ConnectionStrings": {
-    //Connection string used for local testing.
     "TestConnection": "Server=(localdb)\\mssqllocaldb;Database=SurfsUpDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //Connection string used when on webserver.
-    "SurfsupConnection": "Server=localhost;User Id=admin;Password=surfsup123;Database=SurfsUpDb"
+    "SurfsupConnection": "Server=localhost;User Id=admin;Password=surfsup123;Database=SurfsUpDb",
+    "AuthContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Surfvejr;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
