--- a/Surfvejr/appsettings.json
+++ b/Surfvejr/appsettings.json
@@ -10,6 +10,7 @@
   "ConnectionStrings": {
     "TestConnection": "Server=localhost;User Id=admin;Password=surfsup123;Database=SurfsUpDb",
     "SurfsupConnection": "Server=localhost;User Id=admin;Password=surfsup123;Database=SurfsUpDb",
-    "AuthContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Surfvejr;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthContextConnection": "Server=localhost:User Id=admin;Password=surfsup123;Database=SurfsUpDb",
+    //"AuthContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Surfvejr;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
